# ETH6C12MUX

./: README.md
hardware/lib/3d/: Dialight_591.step  RCP-89.stp
hardware/lib/sch/: ETH6C12MXU.bck  ETH6C12MXU.dcm  ETH6C12MXU.lib  ETH6C16MXU.bck  ETH6C16MXU.dcm  ETH6C16MXU.lib  ETH6C20MXU.bck  ETH6C20MXU.dcm  ETH6C20MXU.lib
hardware/project/ETH6C12MUX/: Connector.sch  ETH6C12MUX-cache.lib  ETH6C12MUX.sch-bak  Ethernet.sch-bak  FPGA.sch-bak  MCU.sch  MCU.sch-bak  Power.sch-bak  Relays.sch-bak  USB.sch-bak  sym-lib-table
hardware/project/ETH6C16MUX/: Connector.sch  Connector.sch-bak  ETH6C16MUX-cache.lib  ETH6C16MUX.kicad_pcb  ETH6C16MUX.kicad_pcb-bak  ETH6C16MUX.net  ETH6C16MUX.pro  ETH6C16MUX.sch  ETH6C16MUX.sch-bak  Ethernet.sch  Ethernet.sch-bak  FPGA.sch  FPGA.sch-bak  MCU.sch  MCU.sch-bak  Module_connector.sch  Module_connector.sch-bak  Power.sch  Power.sch-bak  Relays.sch  Relays.sch-bak  USB.sch  USB.sch-bak  fp-info-cache  fp-lib-table  sym-lib-table
html/ETH6C20MUX/: gwd_workspace.json  index.html
software/: .cproject  .mxproject  .project  ETH6C20MUX Debug.launch  ETH6C20MUX.ioc  STM32F765ZGTX_FLASH.ld  STM32F765ZGTX_RAM.ld
software/Debug/: ETH6C20MUX.elf  ETH6C20MUX.list  ETH6C20MUX.map  makefile  objects.list  sources.mk
software/firmware/: .cproject  .mxproject  .project  CMakeLists.txt  ETH6C20MUX.ioc  Makefile.posix  README.rst  STM32F746ZGTX_FLASH.ld  STM32F746ZGTX_RAM.ld  prj.conf  sample.yaml
software/firmware/libscpi/: Makefile
software/firmware/libscpi/inc/scpi/: error.h
software/firmware/src/: main.c  scpi-def.c  scpi-def.h
(+168 files in other folders)
